code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_64.wast
(assert_invalid
  (module (func $type-break-last-void-vs-f32 (result f32)
    (block (result f32) (br 0))
  ))
  "type mismatch"
)